--- a/src/main/java/cesjf/br/view/CadastrarTurma.form
+++ b/src/main/java/cesjf/br/view/CadastrarTurma.form
@@ -7,7 +7,9 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="maximizable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Cadastro de Turma"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -93,9 +95,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="tfNome">
       <BindingProperties>
-        <BindingProperty name="text" source="Form" sourcePath="${turmaControl.turmaDigitada.nome}" target="tfNome" targetPath="text" updateStrategy="0" immediately="false">
-          <BindingParameter name="javax.swing.binding.ParameterKeys.TEXT_CHANGE_STRATEGY" value="javax.swing.binding.TextChangeStrategy.ON_TYPE"/>
-        </BindingProperty>
+        <BindingProperty name="text" source="Form" sourcePath="${turmaControl.turmaDigitada.nome}" target="tfNome" targetPath="text" updateStrategy="0" immediately="false"/>
       </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbensino">
@@ -117,9 +117,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="tfAno">
       <BindingProperties>
-        <BindingProperty name="text" source="Form" sourcePath="${turmaControl.turmaDigitada.ano}" target="tfAno" targetPath="text" updateStrategy="0" immediately="false">
-          <BindingParameter name="javax.swing.binding.ParameterKeys.TEXT_CHANGE_STRATEGY" value="javax.swing.binding.TextChangeStrategy.ON_TYPE"/>
-        </BindingProperty>
+        <BindingProperty name="text" source="Form" sourcePath="${turmaControl.turmaDigitada.ano}" target="tfAno" targetPath="text" updateStrategy="0" immediately="false"/>
       </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbAno">
