--- a/src/main/java/cesjf/br/view/Principal.form
+++ b/src/main/java/cesjf/br/view/Principal.form
@@ -6,13 +6,14 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="mniSair">
           <Properties>
-            <Property name="mnemonic" type="int" value="102"/>
+            <Property name="mnemonic" type="int" value="67"/>
             <Property name="text" type="java.lang.String" value="Cadastro"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="mniCadastrarTurma">
               <Properties>
-                <Property name="mnemonic" type="int" value="111"/>
+                <Property name="mnemonic" type="int" value="67"/>
                 <Property name="text" type="java.lang.String" value="Cadastrar Turma"/>
               </Properties>
               <Events>
@@ -21,7 +22,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniMatricularAluno">
               <Properties>
-                <Property name="mnemonic" type="int" value="115"/>
+                <Property name="mnemonic" type="int" value="77"/>
                 <Property name="text" type="java.lang.String" value="Matricular Aluno"/>
               </Properties>
               <Events>
@@ -32,7 +33,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="exitMenuItem">
               <Properties>
-                <Property name="mnemonic" type="int" value="120"/>
+                <Property name="mnemonic" type="int" value="83"/>
                 <Property name="text" type="java.lang.String" value="Sair"/>
               </Properties>
               <Events>
@@ -43,13 +44,13 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="mnBusca">
           <Properties>
-            <Property name="mnemonic" type="int" value="101"/>
+            <Property name="mnemonic" type="int" value="66"/>
             <Property name="text" type="java.lang.String" value="Busca"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="mniBuscarAluno">
               <Properties>
-                <Property name="mnemonic" type="int" value="116"/>
+                <Property name="mnemonic" type="int" value="65"/>
                 <Property name="text" type="java.lang.String" value="Buscar Aluno"/>
               </Properties>
               <Events>
@@ -58,7 +59,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniTurmasPcd">
               <Properties>
-                <Property name="mnemonic" type="int" value="121"/>
+                <Property name="mnemonic" type="int" value="84"/>
                 <Property name="text" type="java.lang.String" value="Buscar Turmas"/>
               </Properties>
               <Events>
@@ -78,19 +79,19 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="mnSobre">
           <Properties>
-            <Property name="mnemonic" type="int" value="104"/>
+            <Property name="mnemonic" type="int" value="83"/>
             <Property name="text" type="java.lang.String" value="Sobre"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="mniAjuda">
               <Properties>
-                <Property name="mnemonic" type="int" value="99"/>
+                <Property name="mnemonic" type="int" value="117"/>
                 <Property name="text" type="java.lang.String" value="Ajuda"/>
               </Properties>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniSobre">
               <Properties>
-                <Property name="mnemonic" type="int" value="97"/>
+                <Property name="mnemonic" type="int" value="111"/>
                 <Property name="text" type="java.lang.String" value="Sobre"/>
               </Properties>
             </MenuItem>
@@ -101,6 +102,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Sistema de Gerenciamento Escolar"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="menuBar"/>
