Validação de Aluno

--- a/src/main/java/cesjf/br/view/MatricularAluno.form
+++ b/src/main/java/cesjf/br/view/MatricularAluno.form
@@ -185,7 +185,8 @@
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <BindingProperties>
-        <BindingProperty name="text" source="Form" sourcePath="${alunoControl.alunoDigitado.anoNasc}" target="tfAnoNascimento" targetPath="text" updateStrategy="0" immediately="false"/>
+        <BindingProperty name="value" source="Form" sourcePath="${alunoController.alunoDigitado.anoNasc}" target="tfAnoNascimento" targetPath="value" updateStrategy="0" immediately="false"/>
+        <BindingProperty name="text" source="Form" sourcePath="${alunoController.alunoDigitado.anoNasc}" target="tfAnoNascimento" targetPath="text" updateStrategy="0" immediately="false"/>
       </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbPcd">
